hphp/test/zend/good/Zend/tests/ns_038.php.expectf
ok

Fatal error: Call to undefined method Exception::bar() in %s/ns_038.php on line 7
